# abac-permissions-demo

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.txt  docker-compose.yml  gettext.config.js  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml
abac_permissions_demo/: apps.py  celery.py  hosts.py  settings.py  wsgi.py
docker/: casf-database-supervisor.conf  entrypoint.sh  env_file.env  settings_docker.py  settings_local.py  sql_env.env
docker/conf.d/: casf-database-celerybeat.conf  casf-database-celeryd.conf
docker/production/: Dockerfile  entrypoint.sh  env_file.env
docker/webpack/: Dockerfile  env_file.env
tests/: test_settings.py
